# ntt-3d-graphical-engine

./: .gitignore  .prettierrc  CMakeLists.txt  README.md  config.py  engine.code-workspace  profiles.json  pyproject.toml
analyze/: conftest.py  main.py  pyproject.toml
analyze/py_struct/: __init__.py  parser.py  py_attribute.py  py_base.py  py_class.py  py_enum.py  py_function.py  py_parameter.py  py_struct.py  py_template_parameter.py  py_typedef.py
analyze/tests/: test_py_struct.py
cmake/: ntt-assert.cmake  ntt-config.cmake  ntt-glfwConfig.cmake  ntt-stbConfig.cmake  ntt-vulkanConfig.cmake
engine/: CMakeLists.txt
engine/application/: CMakeLists.txt  application.cpp  application.h  applications.cpp  applications.h  ecs.cpp  ecs.h  object.cpp  object.h  ref_counted.cpp  ref_counted.h
engine/application/drivers/: drivers.h
engine/application/drivers/ntt_glfw/: ntt_glfw.h  ntt_glfw_driver.cpp  ntt_glfw_driver.h
engine/application/drivers/ntt_opengl/: ntt_opengl.cpp  ntt_opengl.h  ntt_opengl_inc.h  ntt_opengl_mesh_storage.cpp  ntt_opengl_mesh_storage.h  ntt_opengl_mesh_view_storage.cpp  ntt_opengl_mesh_view_storage.h  ntt_opengl_shader_storage.cpp  ntt_opengl_shader_storage.h  ntt_opengl_texture_storage.cpp  ntt_opengl_texture_storage.h
engine/application/drivers/ntt_vulkan/: ntt_vulkan.cpp  ntt_vulkan.h  ntt_vulkan_inc.cpp  ntt_vulkan_inc.h  ntt_vulkan_mesh_storage.cpp  ntt_vulkan_mesh_storage.h  ntt_vulkan_mesh_view_storage.cpp  ntt_vulkan_mesh_view_storage.h  ntt_vulkan_shader_storage.cpp  ntt_vulkan_shader_storage.h  ntt_vulkan_texture_storage.cpp  ntt_vulkan_texture_storage.h
engine/application/resources/: resource.cpp  resource.h  resource_type.cpp  resource_type.def  resource_type.h  resources.h  texture_resource.cpp  texture_resource.h
engine/application/systems/: system.cpp  system.h  system_globals.cpp  system_globals.h  systems.cpp  systems.h
engine/application/systems/display/: display.h  display_driver.cpp  display_driver.h  display_system.cpp  display_system.h
engine/application/systems/render/: mesh_storage.cpp  mesh_storage.h  mesh_view_storage.cpp  mesh_view_storage.h  render.h  render_driver.cpp  render_driver.h  render_globals.cpp  render_globals.h  render_system.cpp  render_system.h  render_system_types.h  shader_input_topology.def  shader_storage.cpp  shader_storage.h  texture_storage.cpp  texture_storage.h  uniform.cpp  uniform.h  uniform_type.def
engine/application/systems/render/components/: components.h  mesh.cpp  mesh.h  vertex.cpp  vertex.h
engine/application/systems/render/shaders/gles/: line.fs  line.vs  mesh.fs  mesh.vs
engine/application/systems/render/shaders/opengl/: line.vs  mesh.fs  mesh.vs
engine/application/systems/render/shaders/vulkan/: line.fs  line.vs  mesh.fs  mesh.vs
engine/assets/html/: engine.html
engine/core/: CMakeLists.txt  common.h  console.cpp  console.h  console_color.def  core.h  defs.h  globals.cpp  globals.h  id.cpp  id.def  id.h  optional.h  raii.h  result.cpp  result.def  result.h  result.inl  str.cpp  str.h
engine/core/alloc/: alloc.cpp  alloc.h  iallocator.h  malloc_allocator.cpp  malloc_allocator.h  stack_allocator.cpp  stack_allocator.h
engine/core/argparser/: arg_options.def  arg_type.def  argparser.cpp  argparser.h
engine/core/backtrace/: backtrace.cpp  backtrace.h
engine/core/containers/: array.h  containers.h  list.h  map.h  matrix.h  queue.h  stack.h  storage.h
engine/core/smart_ptr/: scope.h  smart_ptr.h
engine/core/utils/: utils.cpp  utils.h
engine/main/: CMakeLists.txt  main_engine.cpp
engine/main/editor/: CMakeLists.txt  main_editor.cpp
engine/main/engine/: CMakeLists.txt  main_engine.cpp
engine/main/unittest/: CMakeLists.txt  main_unittest.cpp
engine/main/unittest/tests/: test_array.cpp  test_list.cpp  test_malloc.cpp  test_string.cpp
engine/main/unittest/tests/applications/: test_object.cpp
engine/main/unittest/tests/containers/: container_test_object.h  test_array.cpp  test_list.cpp  test_queue.cpp  test_stack.cpp
engine/main/unittest/tests/core/: container_test_object.h  test_argparser.cpp  test_id.cpp  test_malloc.cpp  test_smart_ptr.cpp  test_string.cpp
engine/main/unittest/tests/core/containers/: test_array.cpp  test_list.cpp  test_map.cpp  test_matrix.cpp  test_queue.cpp  test_stack.cpp  test_storage.cpp
engine/main/unittest/tests/services/: test_logging.cpp
engine/main/unittest/utilities/: utilities.cpp  utilities.h
engine/services/: CMakeLists.txt  object.h  ref_counted.h  services.h
engine/services/drivers/ntt_glfw/: ntt_glfw.h
engine/services/logging/: format_keyword.def  logging.cpp  logging.h  logging_level.cpp  logging_level.def  logging_level.h  logging_message.cpp  logging_message.h  logging_type.cpp  logging_type.def  logging_type.h
engine/services/logging/handlers/: console_handler.cpp  console_handler.h  handlers.cpp  handlers.h
scripts/: embedded.py
